@@ -94,6 +94,7 @@ CAMERA_INIT_DELAY = 2
 CAMERA_SCAN_INTERVAL = 30
 CAMERA_REGISTER_TIMEOUT = 5
 TIME_FOR_SNAPSHOT = 1
+PRINT_END_TIMEOUT = 11
 
 # --- Lcd queue ---
 LCD_QUEUE_SIZE = 30
