@@ -22,6 +22,7 @@
         - Fix undefined printer states displaying
         - Hide zero temperatures in telemetry
         - Add support to be running behind the proxy
+    * Hold the STOPPED and FINISHED state for at least 11s
 
 0.7.0 (2023-05-19)
     * Fixed printer sends info about api key change to Connect after change
